2009-02-23  Sanel <karijes@users.sourceforge.net>

	* m4/stl.m4:
	* m4/sound.m4:
	* edelib/XSet.h:
	* src/XSet.cpp: removed
	* all-over-the-code: changed license to LGPL, coding standard rechecked
	* COPYING: added file with LGPL license
	* econfig.h: renamed to edelib-global.h

2009-02-21  Sanel <karijes@users.sourceforge.net>

	* edelib/Run.h:
	* src/Run.cpp: removed 'root' option, a planned option for (possible)
	running program as root, where password would be prompted with dialog;
	planned to be implemeted as external program; also shell path will be
	first read from $SHELL variable, then /bin/sh will be executed

	* edelib/Run.h:
	* src/Run.cpp: added run_program_fmt() for printf-like formatted command

2009-02-19  Sanel <karijes@users.sourceforge.net>

	* edelib/Resource.h:
	* src/Resource.cpp: s/find_dir/find_data and changed concept; it should
	seach through data directories and (now) will search anything, like
	directory, file, etc.
	* test/resource.cpp: updated tests
	* src/Resource.cpp: refactored load() function

2009-02-18  Sanel <karijes@users.sourceforge.net>

	* edelib/Resource.h:
	* src/Resource.cpp: added find_config() and find_dir() functions; they
	will search for paths in XDG dirs, according to given search order
	* test/resource.cpp: tests for find_config() and find_dir()

2009-01-24  Sanel <karijes@users.sourceforge.net>

	* Jamconfig.in: s/CFLAGS/CCFLAGS; jam uses CCFLAGS
	* Jamrules: fixed GenLa action so it leaves comments
	* Jamrules: small tweaks in SharedLibraryFromObjects rule
	* test/Jamfile: let xsettings.cpp receive flags too

2009-01-22  Sanel <karijes@users.sourceforge.net>

	* configure.in:
	* edelib/econfig.h: added HAVE_EDELIB_BASE_CONFIG_H so it can be included
	only when edelib gets compiled so symbols in edelib/_conf.h don't collide
	with ones in ede2 config.h or user one

2009-01-20  Sanel <karijes@users.sourceforge.net>

	* First edelib change in 2009 :)
	* src/Config.cpp: fixed issue due retrieving double and float